fix(app-pg): hide pop-up horizontal overflow

--- a/password-generator/css/style.css
+++ b/password-generator/css/style.css
@@ -34,6 +34,8 @@ button {
 #app {
   display: flex;
   justify-content: center;
+  position: relative;
+  overflow-x: hidden;
 }
 
 .container {
